# clap-mml-render-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  config.toml
app/: Cargo.toml  build.rs
app/src/: clipboard.rs  config.rs  config_editor.rs  config_tests.rs  generate.rs  history.rs  history_tests.rs  lib.rs  logging.rs  main.rs  offline_render.rs  patches.rs  random.rs  realtime_play.rs  server.rs  test_utils.rs  text_input.rs  ui_theme.rs  ui_utils.rs  updater.rs
app/src/daw/: batch_logging.rs  cache.rs  http_server.rs  init.rs  input.rs  mixer.rs  mml.rs  mod.rs  playback.rs  playback_tests.rs  playback_util.rs  preview.rs  render_queue.rs  runtime.rs  save.rs  timing.rs  types.rs  ui.rs  wav_io.rs
app/src/daw/http_server/: app.rs  routes.rs
app/src/daw/http_server/routes/: gets.rs  handlers.rs  posts.rs  response.rs  snapshot.rs
app/src/daw/input/: history.rs  insert.rs  mixer.rs  normal.rs  patch_select.rs
app/src/daw/input/normal/: playback.rs
app/src/daw/playback/: cache_mixer.rs  measure_math.rs  measure_mixer.rs  play_server.rs
app/src/daw/preview/: render.rs
app/src/daw/ui/: grid.rs  help.rs  history.rs  logs.rs  mixer.rs  patch_select.rs  status.rs
app/src/history/: daw.rs  helpers.rs  patch_phrase_store.rs  paths.rs  session_state.rs
app/src/offline_render/: render_server.rs
app/src/patches/: tests.rs
app/src/realtime_play/: tests.rs
app/src/tests/: config.rs  history.rs  logging.rs  main.rs  tui.rs  tui_helpers.rs  tui_ui.rs
app/src/tests/config/: editors_and_patch_dirs.rs  parsing_and_validation.rs  path_and_defaults.rs
app/src/tests/daw/: cache_rerender.rs  http_server.rs  input.rs  mml.rs  mod.rs  playback.rs  playback_util.rs  preview.rs  save.rs  timing.rs  ui.rs
app/src/tests/daw/http_server/: apply_pending_commands.rs  request_and_cors.rs  snapshot_queries.rs
app/src/tests/daw/input/: history.rs  insert.rs  mixer.rs  normal.rs
app/src/tests/daw/input/history/: history_overlay.rs  patch_select.rs
app/src/tests/daw/input/normal/: patch_and_mode.rs  patch_tests.rs  playback_and_shortcuts.rs  preview_and_edit.rs
app/src/tests/daw/mod/: start_track_rerender_batch.rs
app/src/tests/daw/playback/: cache_mixer.rs  state.rs  timing.rs
app/src/tests/daw/ui/: draw_tests.rs  helpers.rs  overlay_tests.rs
app/src/tests/history/: storage_and_migration.rs
app/src/tests/tui/: filter_cache.rs  insert_mode.rs  mod.rs  normal_mode.rs  notepad_history.rs  notepad_history_persistence.rs  patch_phrase.rs  patch_phrase_history.rs  patch_select.rs  patch_select_favorites.rs  session.rs
app/src/tests/tui/normal_mode/: editing_and_modes.rs  generate_and_patch.rs  yank_and_navigation.rs
app/src/tests/tui/notepad_history/: entry_and_recording.rs  favorites_and_help.rs  navigation_and_filtering.rs
app/src/tests/tui/patch_select/: filter_and_modes.rs  navigation_and_selection.rs
app/src/tests/tui_ui/: colors_and_footer.rs  help_screens.rs  overlay_screens.rs
app/src/tests/tui_ui/overlay_screens/: notepad_history.rs  patch_phrase.rs  patch_select.rs
app/src/tui/: cache.rs  input.rs  mod.rs  notepad_history.rs  patch_phrase.rs  playback.rs  playback_session.rs  prefetch.rs  render_queue.rs  runtime.rs  session.rs  tests.rs  ui.rs
app/src/tui/input/: patch_select.rs
app/src/tui/input/patch_select/: handler.rs  state.rs
app/src/tui/render_queue/: state.rs  tests.rs  worker.rs
app/src/tui/ui/: help.rs  overlay.rs  status.rs
app/src/tui/ui/overlay/: guide.rs  mod.rs  notepad_history.rs  patch_phrase.rs  patch_select.rs
app/tests/: config.rs
cmrt-runtime/: Cargo.toml
core-lib/: Cargo.toml
core-lib/src/: lib.rs  native_render_probe.rs  patch_list.rs  pipeline.rs  render.rs  tests.rs
core-lib/src/native_render_probe/: context.rs  mod.rs
issue-notes/: 13.md  (+161 more)
(+47 files in other folders)
