[package]
name = "clap-midi-render"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clap-midi-render"
path = "src/main.rs"

[dependencies]
# CLAP host bindings (crates.io 未公開のため git 指定が必要)
clack-host = { git = "https://github.com/prokopyl/clack.git", package = "clack-host" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", package = "clack-extensions", features = ["state", "clack-host"] }

# MML → SMF (cli feature で pass1_parser が有効になる)
mmlabc-to-smf = { git = "https://github.com/cat2151/mmlabc-to-smf-rust.git", package = "mmlabc-to-smf", features = ["cli"] }

# MIDI parsing
midly = "0.5"

# WAV output / 再生
hound = "3.5"
rodio = "0.19"

# TUI
ratatui = "0.28"
tui-textarea = { version = "0.6", features = ["crossterm"] }
crossterm = "0.28"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"
