[package]
name = "clap-mml-render-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmrt"
path = "src/main.rs"

[dependencies]
cmrt-core = { path = "../core-lib" }

# TUI
ratatui = "0.28"
tui-textarea = { version = "0.6", features = ["crossterm"] }
crossterm = "0.28"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP server (for --server mode)
tiny_http = "0.12"

# HTTP client (for auto-update check)
ureq = { version = "2", features = ["json"] }

# Audio output for server WAV conversion
hound = "3.5"
rodio = "0.19"

# MML preprocessing in app-side TUI/DAW modules
mmlabc-to-smf = { git = "https://github.com/cat2151/mmlabc-to-smf-rust.git", package = "mmlabc-to-smf", features = ["cli"] }

# CLAP host type re-export usage in app signatures
clack-host = { git = "https://github.com/prokopyl/clack.git", package = "clack-host" }
