[package]
name = "cmrt-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cmrt_core"
path = "src/lib.rs"

[dependencies]
clap-mml-play-server-core = { git = "https://github.com/cat2151/clap-mml-play-server", rev = "0c43002a306bfd68e7019a0343dc6238e483603f", package = "cmrt-core" }
anyhow = "1"
serde_json = "1"
mmlabc-to-smf = { git = "https://github.com/cat2151/mmlabc-to-smf-rust.git", package = "mmlabc-to-smf", features = ["cli"] }
clack-host = { git = "https://github.com/prokopyl/clack.git", package = "clack-host" }
